--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="FuzzFloral" />
     <meta name="robots" content="index, follow" />
 
-    <meta property="og:title" content="FuzzFloral - Handmade Flowers That Last Forever" />
+    <meta property="og:title" content="FuzzFloral - Everlasting flowers" />
     <meta property="og:description" content="Handcrafted pipe cleaner flower bouquets for birthdays, anniversaries, and special moments." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
