Update page title for FuzzFloral website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FuzzFloral - Handmade Pipe Cleaner Flower Bouquets</title>
+    <title>FuzzFloral - Everlasting flowers</title>
     <meta name="description" content="FuzzFloral creates handmade pipe cleaner flower bouquets designed to last forever. Perfect gifts for birthdays, anniversaries, and special moments in Singapore." />
     <meta name="author" content="FuzzFloral" />
     <meta name="robots" content="index, follow" />
